@@ -1,11 +1,13 @@
+import grails.util.Environment
+
 grails.servlet.version = "2.5" // Change depending on target container compliance (2.5 or 3.0)
-grails.project.source.level = 1.6 // TODO: OTP-263: lets go to java-7...
-grails.project.class.dir = "target/classes"
-grails.project.test.class.dir = "target/test-classes"
-grails.project.test.reports.dir = "target/test-reports"
+
+grails.project.work.dir = 'target'
+
 // As OTP is now productive the application's name should be clean from any version numbering
 grails.project.war.file = "target/otp.war"
 
+grails.project.dependency.resolver = "maven" // or ivy
 grails.project.dependency.resolution = {
     // inherit Grails' default dependencies
     inherits("global") {
@@ -18,24 +20,11 @@ grails.project.dependency.resolution = {
     repositories {
         inherits true // Whether to inherit repository definitions from plugins
         mavenRepo "$ARTIFACTORY_URL"
-        grailsRepo "$ARTIFACTORY_URL/svn.codehaus.org_grails-plugins"
-        //grailsPlugins()
-        //grailsHome()
-        //grailsCentral()
-        //mavenCentral()
-
-        // uncomment these to enable remote dependency resolution from public Maven repositories
-        //mavenCentral()
-        //mavenLocal()
-        //mavenRepo "http://snapshots.repository.codehaus.org"
-        //mavenRepo "http://repository.codehaus.org"
-        //mavenRepo "http://download.java.net/maven/2/"
-        //mavenRepo "http://repository.jboss.com/maven2/"
     }
-    dependencies {
-        // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes eg.
 
-        // runtime 'mysql:mysql-connector-java:5.1.16'
+    dependencies {
+        // specify dependencies here under either 'build', 'compile', 'runtime', 'test' or 'provided' scopes
+
         //git
         compile 'org.eclipse.jgit:org.eclipse.jgit:1.2.0.201112221803-r'
         runtime "commons-jexl:commons-jexl:1.1"
@@ -44,33 +33,56 @@ grails.project.dependency.resolution = {
         // jdbc
         runtime "postgresql:postgresql:9.1-901.jdbc4"
         // ngstools
-        compile "gson:gson:2.2.2"
-        compile "sam:sam:1.78"
+        compile "com.google.code.gson:gson:2.2.4"
+        //compile "sam:sam:1.78"
+        compile "com.github.broadinstitute:picard:1.134"
         // bedUtils
-        compile 'bedUtils:bedUtils:0.6'
+        compile 'bedUtils:bedUtils:0.7'
+
         // general dependencies
         compile "joda-time:joda-time:2.3"
-        compile "org.jadira.usertype:usertype.jodatime:1.9"
+        compile "org.jadira.usertype:usertype.jodatime:2.0.1"
         // dependencies for the flowControl API
         compile "fcClient:fcClient:0.1"
     }
 
     plugins {
-        compile ":hibernate:$grailsVersion"
-        compile ":jquery:1.8.3"
-        runtime ":resources:1.2.RC2" //TODO: update
-        runtime ":page-resources:0.2.3"
+        // core plugins
+        build ":tomcat:7.0.55.3"
+        runtime ":hibernate4:4.3.10"
+        compile ':cache:1.1.8'
+        compile ':scaffolding:2.1.2'
+
+        build(":release:3.1.1", ":rest-client-builder:2.1.1") {
+            export = false
+        }
+
+        // plugins for the compile step
+        compile ":spring-security-core:2.0-RC5"
+        compile "org.grails.plugins:spring-security-ldap:2.0-RC2"
+        compile ":spring-security-acl:2.0-RC2"
         compile ":executor:0.3"
-        compile ":spring-security-core:1.2.7.3"
-        compile ":spring-security-ldap:1.0.6"
-        compile ":spring-security-acl:1.1.1"
-        compile ":console:1.2"
-        compile ":mail:1.0.1"
-        compile ":codenarc:0.18.1"
-        compile ":lesscss-resources:1.3.3"
-        compile ":build-test-data:2.1.2" //http://grails.org/plugin/build-test-data
-        runtime ":database-migration:1.3.2"
-        build ":tomcat:$grailsVersion"
+        compile ":console:1.5.5"
+        compile ":mail:1.0.7"
+        // used by jenkins
+        compile ":codenarc:0.23"
+        test ":code-coverage:1.2.7"
+
+        // plugins needed at runtime
+        runtime ":database-migration:1.4.0"
+        // jQuery
+        runtime ":jquery:1.11.1"
+        runtime ":jquery-ui:1.10.4"
+
+        compile ":asset-pipeline:2.5.1"
+        provided ":less-asset-pipeline:2.3.0"
+        compile ":i18n-asset-pipeline:1.0.5"
+
+
+        test ":build-test-data:2.4.0" //http://grails.org/plugin/build-test-data
+        if ((Environment.getCurrent().getName() == "WORKFLOW_TEST")) {
+            compile ":build-test-data:2.4.0"
+        }
     }
 }
 
@@ -91,8 +103,3 @@ codenarc.properties = {
     GrailsDomainHasEquals.enabled = false
     GrailsDomainHasToString.enabled = false
 }
-
-grails.tomcat.jvmArgs = [
-    "-Xmx1024m",
-    "-XX:MaxPermSize=256m"
-]
